src/golua/goyacc/y.output

0: shift/reduce conflict (shift 6(0), red'n 7(0)) on DO
0: shift/reduce conflict (shift 16(0), red'n 7(0)) on FOR
0: shift/reduce conflict (shift 11(0), red'n 7(0)) on FUNCTION
0: shift/reduce conflict (shift 10(0), red'n 7(0)) on IF
0: shift/reduce conflict (shift 14(0), red'n 7(0)) on LOCAL
0: shift/reduce conflict (shift 9(0), red'n 7(0)) on REPEAT
0: shift/reduce conflict (shift 7(0), red'n 7(0)) on WHILE
0: shift/reduce conflict (shift 15(0), red'n 7(0)) on CLOSURE
0: shift/reduce conflict (shift 19(0), red'n 7(0)) on NAME
state 0
	$accept: .Chunk $end 
	StatList: .    (7)

	DO  shift 6
	FOR  shift 16
	FUNCTION  shift 11
	IF  shift 10
	LOCAL  shift 14
	REPEAT  shift 9
	WHILE  shift 7
	CLOSURE  shift 15
	NAME  shift 19
	.  reduce 7 (src line 63)

	Chunk  goto 1
	Block  goto 2
	StatList  goto 3
	Stat  goto 4
	Binding  goto 5
	Repetition  goto 8
	SetList  goto 12
	FuncCall  goto 13
	Var  goto 17
	PrefixExp  goto 18

state 1
	$accept:  Chunk.$end 

	$end  accept
	.  error


state 2
	Chunk:  Block.    (1)

	.  reduce 1 (src line 50)


state 3
	Block:  StatList.    (2)
	Block:  StatList.LastStat 
	StatList:  StatList.Stat 

	BREAK  shift 22
	DO  shift 6
	FOR  shift 16
	FUNCTION  shift 11
	IF  shift 10
	LOCAL  shift 14
	RETURN  shift 23
	REPEAT  shift 9
	WHILE  shift 7
	CLOSURE  shift 15
	NAME  shift 19
	.  reduce 2 (src line 53)

	LastStat  goto 20
	Stat  goto 21
	Binding  goto 5
	Repetition  goto 8
	SetList  goto 12
	FuncCall  goto 13
	Var  goto 17
	PrefixExp  goto 18

state 4
	StatList:  Stat.    (5)

	.  reduce 5 (src line 60)


state 5
	Stat:  Binding.    (8)

	.  reduce 8 (src line 65)


6: shift/reduce conflict (shift 6(0), red'n 7(0)) on DO
6: shift/reduce conflict (shift 16(0), red'n 7(0)) on FOR
6: shift/reduce conflict (shift 11(0), red'n 7(0)) on FUNCTION
6: shift/reduce conflict (shift 10(0), red'n 7(0)) on IF
6: shift/reduce conflict (shift 14(0), red'n 7(0)) on LOCAL
6: shift/reduce conflict (shift 9(0), red'n 7(0)) on REPEAT
6: shift/reduce conflict (shift 7(0), red'n 7(0)) on WHILE
6: shift/reduce conflict (shift 15(0), red'n 7(0)) on CLOSURE
6: shift/reduce conflict (shift 19(0), red'n 7(0)) on NAME
state 6
	Stat:  DO.Block END 
	StatList: .    (7)

	DO  shift 6
	FOR  shift 16
	FUNCTION  shift 11
	IF  shift 10
	LOCAL  shift 14
	REPEAT  shift 9
	WHILE  shift 7
	CLOSURE  shift 15
	NAME  shift 19
	.  reduce 7 (src line 63)

	Block  goto 24
	StatList  goto 3
	Stat  goto 4
	Binding  goto 5
	Repetition  goto 8
	SetList  goto 12
	FuncCall  goto 13
	Var  goto 17
	PrefixExp  goto 18

state 7
	Stat:  WHILE.Exp DO Block END 

	FALSE  shift 28
	FUNCTION  shift 39
	NIL  shift 26
	NOT  shift 36
	TRUE  shift 27
	NUMBER  shift 29
	STRING  shift 30
	NAME  shift 19
	MORE  shift 31
	-  shift 38
	#  shift 37
	[  shift 43
	{  shift 42
	.  error

	Exp  goto 25
	FuncCall  goto 41
	Var  goto 40
	FuncDef  goto 32
	PrefixExp  goto 33
	Tableconstructor  goto 34
	Arrayconstructor  goto 35

state 8
	Stat:  Repetition.DO Block END 

	DO  shift 44
	.  error


9: shift/reduce conflict (shift 6(0), red'n 7(0)) on DO
9: shift/reduce conflict (shift 16(0), red'n 7(0)) on FOR
9: shift/reduce conflict (shift 11(0), red'n 7(0)) on FUNCTION
9: shift/reduce conflict (shift 10(0), red'n 7(0)) on IF
9: shift/reduce conflict (shift 14(0), red'n 7(0)) on LOCAL
9: shift/reduce conflict (shift 9(0), red'n 7(0)) on REPEAT
9: shift/reduce conflict (shift 7(0), red'n 7(0)) on WHILE
9: shift/reduce conflict (shift 15(0), red'n 7(0)) on CLOSURE
9: shift/reduce conflict (shift 19(0), red'n 7(0)) on NAME
state 9
	Stat:  REPEAT.UBlock 
	StatList: .    (7)

	DO  shift 6
	FOR  shift 16
	FUNCTION  shift 11
	IF  shift 10
	LOCAL  shift 14
	REPEAT  shift 9
	WHILE  shift 7
	CLOSURE  shift 15
	NAME  shift 19
	.  reduce 7 (src line 63)

	Block  goto 46
	StatList  goto 3
	UBlock  goto 45
	Stat  goto 4
	Binding  goto 5
	Repetition  goto 8
	SetList  goto 12
	FuncCall  goto 13
	Var  goto 17
	PrefixExp  goto 18

state 10
	Stat:  IF.Conds END 

	FALSE  shift 28
	FUNCTION  shift 39
	NIL  shift 26
	NOT  shift 36
	TRUE  shift 27
	NUMBER  shift 29
	STRING  shift 30
	NAME  shift 19
	MORE  shift 31
	-  shift 38
	#  shift 37
	[  shift 43
	{  shift 42
	.  error

	Exp  goto 50
	Conds  goto 47
	FuncCall  goto 41
	CondList  goto 48
	Cond  goto 49
	Var  goto 40
	FuncDef  goto 32
	PrefixExp  goto 33
	Tableconstructor  goto 34
	Arrayconstructor  goto 35

state 11
	Stat:  FUNCTION.FuncName FuncBody 

	NAME  shift 53
	.  error

	FuncName  goto 51
	DottedName  goto 52

state 12
	Stat:  SetList.= ExpList 
	SetList:  SetList., Var 

	=  shift 54
	,  shift 55
	.  error


state 13
	Stat:  FuncCall.    (16)
	PrefixExp:  FuncCall.    (70)

	(  reduce 70 (src line 171)
	:  reduce 70 (src line 171)
	.  reduce 70 (src line 171)
	[  reduce 70 (src line 171)
	.  reduce 16 (src line 77)


state 14
	Binding:  LOCAL.NameList 
	Binding:  LOCAL.NameList = ExpList 
	Binding:  LOCAL.FUNCTION NAME FuncBody 

	FUNCTION  shift 57
	NAME  shift 58
	.  error

	NameList  goto 56

state 15
	Binding:  CLOSURE.( NameList ) 

	(  shift 59
	.  error


state 16
	Repetition:  FOR.NAME = ExpList 
	Repetition:  FOR.Name2 IN ExpList 

	NAME  shift 60
	.  error

	Name2  goto 61

state 17
	SetList:  Var.    (31)
	PrefixExp:  Var.    (69)

	=  reduce 31 (src line 110)
	,  reduce 31 (src line 110)
	.  reduce 69 (src line 169)


state 18
	Var:  PrefixExp.[ Exp ] 
	Var:  PrefixExp.. NAME 
	FuncCall:  PrefixExp.Args 
	FuncCall:  PrefixExp.: NAME Args 

	(  shift 66
	:  shift 65
	.  shift 63
	[  shift 62
	.  error

	Args  goto 64

state 19
	Var:  NAME.    (66)

	.  reduce 66 (src line 161)


state 20
	Block:  StatList LastStat.    (3)

	.  reduce 3 (src line 55)


state 21
	StatList:  StatList Stat.    (6)

	.  reduce 6 (src line 62)


state 22
	LastStat:  BREAK.    (24)

	.  reduce 24 (src line 94)


state 23
	LastStat:  RETURN.    (25)
	LastStat:  RETURN.ExpList 

	FALSE  shift 28
	FUNCTION  shift 39
	NIL  shift 26
	NOT  shift 36
	TRUE  shift 27
	NUMBER  shift 29
	STRING  shift 30
	NAME  shift 19
	MORE  shift 31
	-  shift 38
	#  shift 37
	[  shift 43
	{  shift 42
	.  reduce 25 (src line 96)

	Exp  goto 68
	ExpList  goto 67
	FuncCall  goto 41
	Var  goto 40
	FuncDef  goto 32
	PrefixExp  goto 33
	Tableconstructor  goto 34
	Arrayconstructor  goto 35

state 24
	Stat:  DO Block.END 

	END  shift 69
	.  error


state 25
	Stat:  WHILE Exp.DO Block END 
	Exp:  Exp.OR Exp 
	Exp:  Exp.AND Exp 
	Exp:  Exp.LogicOp Exp 
	Exp:  Exp.STRADD Exp 
	Exp:  Exp.- Exp 
	Exp:  Exp.+ Exp 
	Exp:  Exp.* Exp 
	Exp:  Exp./ Exp 
	Exp:  Exp.^ Exp 
	Exp:  Exp.% Exp 

	AND  shift 72
	DO  shift 70
	OR  shift 71
	SLTEQ  shift 83
	SGTEQ  shift 84
	SEQ  shift 85
	SNOTEQ  shift 86
	STRADD  shift 74
	<  shift 81
	>  shift 82
	+  shift 76
	-  shift 75
	*  shift 77
	/  shift 78
	%  shift 80
	^  shift 79
	.  error

	LogicOp  goto 73

state 26
	Exp:  NIL.    (37)

	.  reduce 37 (src line 128)


state 27
	Exp:  TRUE.    (38)

	.  reduce 38 (src line 130)


state 28
	Exp:  FALSE.    (39)

	.  reduce 39 (src line 131)


state 29
	Exp:  NUMBER.    (40)

	.  reduce 40 (src line 132)


state 30
	Exp:  STRING.    (41)

	.  reduce 41 (src line 133)


state 31
	Exp:  MORE.    (42)

	.  reduce 42 (src line 134)


state 32
	Exp:  FuncDef.    (43)

	.  reduce 43 (src line 135)


state 33
	Exp:  PrefixExp.    (44)
	Var:  PrefixExp.[ Exp ] 
	Var:  PrefixExp.. NAME 
	FuncCall:  PrefixExp.Args 
	FuncCall:  PrefixExp.: NAME Args 

	(  shift 66
	:  shift 65
	.  shift 63
	[  shift 62
	.  reduce 44 (src line 136)

	Args  goto 64

state 34
	Exp:  Tableconstructor.    (45)

	.  reduce 45 (src line 137)


state 35
	Exp:  Arrayconstructor.    (46)

	.  reduce 46 (src line 138)


state 36
	Exp:  NOT.Exp 

	FALSE  shift 28
	FUNCTION  shift 39
	NIL  shift 26
	NOT  shift 36
	TRUE  shift 27
	NUMBER  shift 29
	STRING  shift 30
	NAME  shift 19
	MORE  shift 31
	-  shift 38
	#  shift 37
	[  shift 43
	{  shift 42
	.  error

	Exp  goto 87
	FuncCall  goto 41
	Var  goto 40
	FuncDef  goto 32
	PrefixExp  goto 33
	Tableconstructor  goto 34
	Arrayconstructor  goto 35

state 37
	Exp:  #.Exp 

	FALSE  shift 28
	FUNCTION  shift 39
	NIL  shift 26
	NOT  shift 36
	TRUE  shift 27
	NUMBER  shift 29
	STRING  shift 30
	NAME  shift 19
	MORE  shift 31
	-  shift 38
	#  shift 37
	[  shift 43
	{  shift 42
	.  error

	Exp  goto 88
	FuncCall  goto 41
	Var  goto 40
	FuncDef  goto 32
	PrefixExp  goto 33
	Tableconstructor  goto 34
	Arrayconstructor  goto 35

state 38
	Exp:  -.Exp 

	FALSE  shift 28
	FUNCTION  shift 39
	NIL  shift 26
	NOT  shift 36
	TRUE  shift 27
	NUMBER  shift 29
	STRING  shift 30
	NAME  shift 19
	MORE  shift 31
	-  shift 38
	#  shift 37
	[  shift 43
	{  shift 42
	.  error

	Exp  goto 89
	FuncCall  goto 41
	Var  goto 40
	FuncDef  goto 32
	PrefixExp  goto 33
	Tableconstructor  goto 34
	Arrayconstructor  goto 35

state 39
	FuncDef:  FUNCTION.FuncBody 

	(  shift 92
	.  error

	FuncBody  goto 90
	ParamDefList  goto 91

state 40
	PrefixExp:  Var.    (69)

	.  reduce 69 (src line 169)


state 41
	PrefixExp:  FuncCall.    (70)

	.  reduce 70 (src line 171)


state 42
	Tableconstructor:  {.} 
	Tableconstructor:  {.FieldList } 
	Tableconstructor:  {.FieldList , } 

	NAME  shift 96
	[  shift 97
	}  shift 93
	.  error

	FieldList  goto 94
	Field  goto 95

state 43
	Arrayconstructor:  [.] 
	Arrayconstructor:  [.ExpList ] 
	Arrayconstructor:  [.ExpList , ] 

	FALSE  shift 28
	FUNCTION  shift 39
	NIL  shift 26
	NOT  shift 36
	TRUE  shift 27
	NUMBER  shift 29
	STRING  shift 30
	NAME  shift 19
	MORE  shift 31
	-  shift 38
	#  shift 37
	[  shift 43
	]  shift 98
	{  shift 42
	.  error

	Exp  goto 68
	ExpList  goto 99
	FuncCall  goto 41
	Var  goto 40
	FuncDef  goto 32
	PrefixExp  goto 33
	Tableconstructor  goto 34
	Arrayconstructor  goto 35

44: shift/reduce conflict (shift 6(0), red'n 7(0)) on DO
44: shift/reduce conflict (shift 16(0), red'n 7(0)) on FOR
44: shift/reduce conflict (shift 11(0), red'n 7(0)) on FUNCTION
44: shift/reduce conflict (shift 10(0), red'n 7(0)) on IF
44: shift/reduce conflict (shift 14(0), red'n 7(0)) on LOCAL
44: shift/reduce conflict (shift 9(0), red'n 7(0)) on REPEAT
44: shift/reduce conflict (shift 7(0), red'n 7(0)) on WHILE
44: shift/reduce conflict (shift 15(0), red'n 7(0)) on CLOSURE
44: shift/reduce conflict (shift 19(0), red'n 7(0)) on NAME
state 44
	Stat:  Repetition DO.Block END 
	StatList: .    (7)

	DO  shift 6
	FOR  shift 16
	FUNCTION  shift 11
	IF  shift 10
	LOCAL  shift 14
	REPEAT  shift 9
	WHILE  shift 7
	CLOSURE  shift 15
	NAME  shift 19
	.  reduce 7 (src line 63)

	Block  goto 100
	StatList  goto 3
	Stat  goto 4
	Binding  goto 5
	Repetition  goto 8
	SetList  goto 12
	FuncCall  goto 13
	Var  goto 17
	PrefixExp  goto 18

state 45
	Stat:  REPEAT UBlock.    (12)

	.  reduce 12 (src line 70)


state 46
	UBlock:  Block.UNTIL Exp 

	UNTIL  shift 101
	.  error


state 47
	Stat:  IF Conds.END 

	END  shift 102
	.  error


state 48
	Conds:  CondList.    (19)
	Conds:  CondList.ELSE Block 
	CondList:  CondList.ELSEIF Cond 

	ELSEIF  shift 104
	ELSE  shift 103
	.  reduce 19 (src line 83)


state 49
	CondList:  Cond.    (21)

	.  reduce 21 (src line 87)


state 50
	Cond:  Exp.THEN Block 
	Exp:  Exp.OR Exp 
	Exp:  Exp.AND Exp 
	Exp:  Exp.LogicOp Exp 
	Exp:  Exp.STRADD Exp 
	Exp:  Exp.- Exp 
	Exp:  Exp.+ Exp 
	Exp:  Exp.* Exp 
	Exp:  Exp./ Exp 
	Exp:  Exp.^ Exp 
	Exp:  Exp.% Exp 

	AND  shift 72
	OR  shift 71
	THEN  shift 105
	SLTEQ  shift 83
	SGTEQ  shift 84
	SEQ  shift 85
	SNOTEQ  shift 86
	STRADD  shift 74
	<  shift 81
	>  shift 82
	+  shift 76
	-  shift 75
	*  shift 77
	/  shift 78
	%  shift 80
	^  shift 79
	.  error

	LogicOp  goto 73

state 51
	Stat:  FUNCTION FuncName.FuncBody 

	(  shift 92
	.  error

	FuncBody  goto 106
	ParamDefList  goto 91

state 52
	FuncName:  DottedName.    (33)
	FuncName:  DottedName.: NAME 
	DottedName:  DottedName.. NAME 

	:  shift 107
	.  shift 108
	.  reduce 33 (src line 114)


state 53
	DottedName:  NAME.    (35)

	.  reduce 35 (src line 121)


state 54
	Stat:  SetList =.ExpList 

	FALSE  shift 28
	FUNCTION  shift 39
	NIL  shift 26
	NOT  shift 36
	TRUE  shift 27
	NUMBER  shift 29
	STRING  shift 30
	NAME  shift 19
	MORE  shift 31
	-  shift 38
	#  shift 37
	[  shift 43
	{  shift 42
	.  error

	Exp  goto 68
	ExpList  goto 109
	FuncCall  goto 41
	Var  goto 40
	FuncDef  goto 32
	PrefixExp  goto 33
	Tableconstructor  goto 34
	Arrayconstructor  goto 35

state 55
	SetList:  SetList ,.Var 

	NAME  shift 19
	.  error

	FuncCall  goto 41
	Var  goto 110
	PrefixExp  goto 18

state 56
	Binding:  LOCAL NameList.    (27)
	Binding:  LOCAL NameList.= ExpList 
	NameList:  NameList., NAME 

	=  shift 111
	,  shift 112
	.  reduce 27 (src line 99)


state 57
	Binding:  LOCAL FUNCTION.NAME FuncBody 

	NAME  shift 113
	.  error


state 58
	NameList:  NAME.    (84)

	.  reduce 84 (src line 206)


state 59
	Binding:  CLOSURE (.NameList ) 

	NAME  shift 58
	.  error

	NameList  goto 114

state 60
	Repetition:  FOR NAME.= ExpList 
	Name2:  NAME.    (82)
	Name2:  NAME., NAME 

	=  shift 115
	,  shift 116
	.  reduce 82 (src line 202)


state 61
	Repetition:  FOR Name2.IN ExpList 

	IN  shift 117
	.  error


state 62
	Var:  PrefixExp [.Exp ] 

	FALSE  shift 28
	FUNCTION  shift 39
	NIL  shift 26
	NOT  shift 36
	TRUE  shift 27
	NUMBER  shift 29
	STRING  shift 30
	NAME  shift 19
	MORE  shift 31
	-  shift 38
	#  shift 37
	[  shift 43
	{  shift 42
	.  error

	Exp  goto 118
	FuncCall  goto 41
	Var  goto 40
	FuncDef  goto 32
	PrefixExp  goto 33
	Tableconstructor  goto 34
	Arrayconstructor  goto 35

state 63
	Var:  PrefixExp ..NAME 

	NAME  shift 119
	.  error


state 64
	FuncCall:  PrefixExp Args.    (71)

	.  reduce 71 (src line 173)


state 65
	FuncCall:  PrefixExp :.NAME Args 

	NAME  shift 120
	.  error


state 66
	Args:  (.) 
	Args:  (.ExpList ) 

	FALSE  shift 28
	FUNCTION  shift 39
	NIL  shift 26
	NOT  shift 36
	TRUE  shift 27
	NUMBER  shift 29
	STRING  shift 30
	NAME  shift 19
	MORE  shift 31
	-  shift 38
	)  shift 121
	#  shift 37
	[  shift 43
	{  shift 42
	.  error

	Exp  goto 68
	ExpList  goto 122
	FuncCall  goto 41
	Var  goto 40
	FuncDef  goto 32
	PrefixExp  goto 33
	Tableconstructor  goto 34
	Arrayconstructor  goto 35

state 67
	LastStat:  RETURN ExpList.    (26)
	ExpList:  ExpList., Exp 

	,  shift 123
	.  reduce 26 (src line 97)


state 68
	Exp:  Exp.OR Exp 
	Exp:  Exp.AND Exp 
	Exp:  Exp.LogicOp Exp 
	Exp:  Exp.STRADD Exp 
	Exp:  Exp.- Exp 
	Exp:  Exp.+ Exp 
	Exp:  Exp.* Exp 
	Exp:  Exp./ Exp 
	Exp:  Exp.^ Exp 
	Exp:  Exp.% Exp 
	ExpList:  Exp.    (89)

	AND  shift 72
	OR  shift 71
	SLTEQ  shift 83
	SGTEQ  shift 84
	SEQ  shift 85
	SNOTEQ  shift 86
	STRADD  shift 74
	<  shift 81
	>  shift 82
	+  shift 76
	-  shift 75
	*  shift 77
	/  shift 78
	%  shift 80
	^  shift 79
	.  reduce 89 (src line 215)

	LogicOp  goto 73

state 69
	Stat:  DO Block END.    (9)

	.  reduce 9 (src line 67)


70: shift/reduce conflict (shift 6(0), red'n 7(0)) on DO
70: shift/reduce conflict (shift 16(0), red'n 7(0)) on FOR
70: shift/reduce conflict (shift 11(0), red'n 7(0)) on FUNCTION
70: shift/reduce conflict (shift 10(0), red'n 7(0)) on IF
70: shift/reduce conflict (shift 14(0), red'n 7(0)) on LOCAL
70: shift/reduce conflict (shift 9(0), red'n 7(0)) on REPEAT
70: shift/reduce conflict (shift 7(0), red'n 7(0)) on WHILE
70: shift/reduce conflict (shift 15(0), red'n 7(0)) on CLOSURE
70: shift/reduce conflict (shift 19(0), red'n 7(0)) on NAME
state 70
	Stat:  WHILE Exp DO.Block END 
	StatList: .    (7)

	DO  shift 6
	FOR  shift 16
	FUNCTION  shift 11
	IF  shift 10
	LOCAL  shift 14
	REPEAT  shift 9
	WHILE  shift 7
	CLOSURE  shift 15
	NAME  shift 19
	.  reduce 7 (src line 63)

	Block  goto 124
	StatList  goto 3
	Stat  goto 4
	Binding  goto 5
	Repetition  goto 8
	SetList  goto 12
	FuncCall  goto 13
	Var  goto 17
	PrefixExp  goto 18

state 71
	Exp:  Exp OR.Exp 

	FALSE  shift 28
	FUNCTION  shift 39
	NIL  shift 26
	NOT  shift 36
	TRUE  shift 27
	NUMBER  shift 29
	STRING  shift 30
	NAME  shift 19
	MORE  shift 31
	-  shift 38
	#  shift 37
	[  shift 43
	{  shift 42
	.  error

	Exp  goto 125
	FuncCall  goto 41
	Var  goto 40
	FuncDef  goto 32
	PrefixExp  goto 33
	Tableconstructor  goto 34
	Arrayconstructor  goto 35

state 72
	Exp:  Exp AND.Exp 

	FALSE  shift 28
	FUNCTION  shift 39
	NIL  shift 26
	NOT  shift 36
	TRUE  shift 27
	NUMBER  shift 29
	STRING  shift 30
	NAME  shift 19
	MORE  shift 31
	-  shift 38
	#  shift 37
	[  shift 43
	{  shift 42
	.  error

	Exp  goto 126
	FuncCall  goto 41
	Var  goto 40
	FuncDef  goto 32
	PrefixExp  goto 33
	Tableconstructor  goto 34
	Arrayconstructor  goto 35

state 73
	Exp:  Exp LogicOp.Exp 

	FALSE  shift 28
	FUNCTION  shift 39
	NIL  shift 26
	NOT  shift 36
	TRUE  shift 27
	NUMBER  shift 29
	STRING  shift 30
	NAME  shift 19
	MORE  shift 31
	-  shift 38
	#  shift 37
	[  shift 43
	{  shift 42
	.  error

	Exp  goto 127
	FuncCall  goto 41
	Var  goto 40
	FuncDef  goto 32
	PrefixExp  goto 33
	Tableconstructor  goto 34
	Arrayconstructor  goto 35

state 74
	Exp:  Exp STRADD.Exp 

	FALSE  shift 28
	FUNCTION  shift 39
	NIL  shift 26
	NOT  shift 36
	TRUE  shift 27
	NUMBER  shift 29
	STRING  shift 30
	NAME  shift 19
	MORE  shift 31
	-  shift 38
	#  shift 37
	[  shift 43
	{  shift 42
	.  error

	Exp  goto 128
	FuncCall  goto 41
	Var  goto 40
	FuncDef  goto 32
	PrefixExp  goto 33
	Tableconstructor  goto 34
	Arrayconstructor  goto 35

state 75
	Exp:  Exp -.Exp 

	FALSE  shift 28
	FUNCTION  shift 39
	NIL  shift 26
	NOT  shift 36
	TRUE  shift 27
	NUMBER  shift 29
	STRING  shift 30
	NAME  shift 19
	MORE  shift 31
	-  shift 38
	#  shift 37
	[  shift 43
	{  shift 42
	.  error

	Exp  goto 129
	FuncCall  goto 41
	Var  goto 40
	FuncDef  goto 32
	PrefixExp  goto 33
	Tableconstructor  goto 34
	Arrayconstructor  goto 35

state 76
	Exp:  Exp +.Exp 

	FALSE  shift 28
	FUNCTION  shift 39
	NIL  shift 26
	NOT  shift 36
	TRUE  shift 27
	NUMBER  shift 29
	STRING  shift 30
	NAME  shift 19
	MORE  shift 31
	-  shift 38
	#  shift 37
	[  shift 43
	{  shift 42
	.  error
